inet: Add __connman_inet_get_interface_mac_address()
Following ACD code will need this utility function. So we moved
 get_interface_mac_address() from gdhcp/client.c to src/inet.c.

--- a/Makefile.am
+++ b/Makefile.am
@@ -360,12 +360,12 @@ tools_wpad_test_LDADD = @GLIB_LIBS@ -lresolv
 
 tools_stats_tool_LDADD = @GLIB_LIBS@
 
-tools_dhcp_test_SOURCES = $(backtrace_sources) src/log.c \
-		 src/util.c $(gdhcp_sources) tools/dhcp-test.c src/shared/arp.c
+tools_dhcp_test_SOURCES = $(backtrace_sources) src/log.c src/util.c \
+		 $(gdhcp_sources) src/inet.c tools/dhcp-test.c src/shared/arp.c
 tools_dhcp_test_LDADD = @GLIB_LIBS@ -ldl
 
 tools_dhcp_server_test_SOURCES =  $(backtrace_sources) src/log.c src/util.c \
-		$(gdhcp_sources) tools/dhcp-server-test.c src/shared/arp.c
+		$(gdhcp_sources) src/inet.c tools/dhcp-server-test.c src/shared/arp.c
 tools_dhcp_server_test_LDADD = @GLIB_LIBS@ -ldl
 
 tools_dbus_test_SOURCES = tools/dbus-test.c
